# SaturnTTS

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: model.yaml  train_a.yaml  train_b.yaml
data/: metadata.json  metadata_train.json  metadata_val.json  styles.json  vocab.txt
scripts/: chat_server.py  generate_samples.py  prepare_data.py  train_phase_a.py  train_phase_b.py
src/saturn_tts/infer/: generate.py
src/saturn_tts/model/: cfm_style.py  dataset.py
src/saturn_tts/model/backbones/: dit_style.py
